task 11, fluent style introduced

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,35 @@ gradle-app.setting
 .idea/workspace.xml
 .idea/misc.xml
 .idea/workspace.xml___jb_tmp___
+.idea/libraries/Gradle__org_seleniumhq_selenium_selenium_chrome_driver_3_13_0.xml
+.idea/libraries/Gradle__org_seleniumhq_selenium_selenium_api_3_14_0.xml
+.idea/libraries/Gradle__org_seleniumhq_selenium_selenium_api_3_13_0.xml
+.idea/libraries/Gradle__org_hamcrest_java_hamcrest_2_0_0_0.xml
+.idea/libraries/Gradle__net_bytebuddy_byte_buddy_1_8_3.xml
+.idea/libraries/Gradle__net_bytebuddy_byte_buddy_1_8_15.xml
+.idea/libraries/Gradle__com_google_code_gson_gson_2_8_4.xml
+.idea/libraries/Gradle__org_seleniumhq_selenium_selenium_java_3_13_0.xml
+.idea/libraries/Gradle__org_seleniumhq_selenium_selenium_ie_driver_3_14_0.xml
+.idea/libraries/Gradle__org_seleniumhq_selenium_selenium_ie_driver_3_13_0.xml
+.idea/libraries/Gradle__org_seleniumhq_selenium_selenium_firefox_driver_3_14_0.xml
+.idea/libraries/Gradle__org_seleniumhq_selenium_selenium_firefox_driver_3_13_0.xml
+.idea/libraries/Gradle__org_seleniumhq_selenium_selenium_edge_driver_3_14_0.xml
+.idea/libraries/Gradle__org_seleniumhq_selenium_selenium_edge_driver_3_13_0.xml
+.idea/libraries/Gradle__org_seleniumhq_selenium_selenium_chrome_driver_3_14_0.xml
+.idea/libraries/Gradle__com_google_code_gson_gson_2_8_4.xml
+.idea/libraries/Gradle__net_bytebuddy_byte_buddy_1_8_3.xml
+.idea/libraries/Gradle__org_seleniumhq_selenium_selenium_api_3_13_0.xml
+.idea/libraries/Gradle__org_seleniumhq_selenium_selenium_chrome_driver_3_13_0.xml
+.idea/libraries/Gradle__org_seleniumhq_selenium_selenium_edge_driver_3_13_0.xml
+.idea/libraries/Gradle__org_seleniumhq_selenium_selenium_firefox_driver_3_13_0.xml
+.idea/libraries/Gradle__org_seleniumhq_selenium_selenium_ie_driver_3_13_0.xml
+.idea/libraries/Gradle__org_seleniumhq_selenium_selenium_java_3_13_0.xml
+.idea/libraries/Gradle__org_seleniumhq_selenium_selenium_java_3_14_0.xml
+.idea/libraries/Gradle__org_seleniumhq_selenium_selenium_opera_driver_3_13_0.xml
+.idea/libraries/Gradle__org_seleniumhq_selenium_selenium_opera_driver_3_14_0.xml
+.idea/libraries/Gradle__org_seleniumhq_selenium_selenium_remote_driver_3_13_0.xml
+.idea/libraries/Gradle__org_seleniumhq_selenium_selenium_remote_driver_3_14_0.xml
+.idea/libraries/Gradle__org_seleniumhq_selenium_selenium_safari_driver_3_13_0.xml
+.idea/libraries/Gradle__org_seleniumhq_selenium_selenium_safari_driver_3_14_0.xml
+.idea/libraries/Gradle__org_seleniumhq_selenium_selenium_support_3_13_0.xml
+.idea/libraries/Gradle__org_seleniumhq_selenium_selenium_support_3_14_0.xml
