--- a/sandbox/build.gradle
+++ b/sandbox/build.gradle
@@ -1,6 +1,4 @@
 apply plugin: 'java'
-apply plugin: 'application'
-mainClassName = "pl.stqa.pft.nabiezaco.MyFirstProgram"
 
 repositories {
     mavenCentral()
@@ -8,4 +6,6 @@ repositories {
 
 dependencies {
     compile 'org.testng:testng:6.14.3'
+    compile 'org.seleniumhq.selenium:selenium-java:3.14.0'
+    compile 'org.hamcrest:java-hamcrest:2.0.0.0'
 }
