phone numer tests with regexp added (lecture 5.10)

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,9 @@ gradle-app.setting
 .idea/libraries/Gradle__org_seleniumhq_selenium_selenium_safari_driver_3_14_0.xml
 .idea/libraries/Gradle__org_seleniumhq_selenium_selenium_support_3_13_0.xml
 .idea/libraries/Gradle__org_seleniumhq_selenium_selenium_support_3_14_0.xml
+addressbok-web-tests/.idea/vcs.xml
+addressbok-web-tests/.idea/vcs.xml
+addressbok-web-tests/.idea/vcs.xml
+addressbok-web-tests/.idea/workspace.xml
+addressbok-web-tests/.idea/workspace.xml
+addressbok-web-tests/.idea/vcs.xml
