--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,6 @@ addressbok-web-tests/.idea/vcs.xml
 addressbok-web-tests/.idea/workspace.xml
 addressbok-web-tests/.idea/workspace.xml
 addressbok-web-tests/.idea/vcs.xml
+addressbok-web-tests/.idea/workspace.xml
+addressbok-web-tests/.idea/workspace.xml
+*.xml
