--- a/.gitignore
+++ b/.gitignore
@@ -94,3 +94,5 @@ sandbox/src/test/java/pl/stqa/pft/sandbox/PointTests.java
 sandbox/src/main/java/pl/stqa/pft/sandbox/MyFirstProgram.java
 sandbox/src/main/java/pl/stqa/pft/sandbox/Point.java
 sandbox/src/test/java/pl/stqa/pft/sandbox/PointTests.java
+addressbok-web-tests/.idea/workspace.xml
+addressbok-web-tests/.idea/workspace.xml
