--- a/.gitignore
+++ b/.gitignore
@@ -95,3 +95,4 @@ sandbox/src/main/java/pl/stqa/pft/sandbox/MyFirstProgram.java
 sandbox/src/main/java/pl/stqa/pft/sandbox/Point.java
 sandbox/src/test/java/pl/stqa/pft/sandbox/PointTests.java
 addressbok-web-tests/.idea/workspace.xml
+addressbok-web-tests/.idea/workspace.xml
