--- a/.gitignore
+++ b/.gitignore
@@ -96,3 +96,4 @@ sandbox/src/main/java/pl/stqa/pft/sandbox/Point.java
 sandbox/src/test/java/pl/stqa/pft/sandbox/PointTests.java
 addressbok-web-tests/.idea/workspace.xml
 addressbok-web-tests/.idea/workspace.xml
+sandbox/src/main/java/pl/stqa/pft/nabiezaco/doSoapUI.java
