closing files after using with try()

--- a/.gitignore
+++ b/.gitignore
@@ -97,3 +97,4 @@ sandbox/src/test/java/pl/stqa/pft/sandbox/PointTests.java
 addressbok-web-tests/.idea/workspace.xml
 addressbok-web-tests/.idea/workspace.xml
 sandbox/src/main/java/pl/stqa/pft/nabiezaco/doSoapUI.java
+addressbok-web-tests/.idea/workspace.xml
