--- a/.gitignore
+++ b/.gitignore
@@ -184,3 +184,4 @@ addressbok-web-tests/build/test-results/testContacts/binary/output.bin
 *.html
 *.class
 *.class
+addressbok-web-tests/.idea/workspace.xml
