--- a/sandbox/build.gradle
+++ b/sandbox/build.gradle
@@ -9,3 +9,8 @@ dependencies {
     compile 'org.seleniumhq.selenium:selenium-java:3.14.0'
     compile 'org.hamcrest:java-hamcrest:2.0.0.0'
 }
+
+test {
+	useTestNG()
+}
+	
